<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">畅通服务</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="index_title">畅通服务网</string>
    <string name="login_title">用户登录</string>
	<string name="login_Notice_txt_Phone">请输入手机登录号码</string>
	<string name="login_Notice_txt_PhonePwd">请输入登录密码</string>
	<string name="car_search_title">车辆查询</string>
	<string name="user_name">用户名</string>
	<string name="txtview_car_search_numtype">好牌种类：</string>
	<string name="txtview_car_search_num">好牌号码：</string>
	<string name="txtview_car_search_registernum">登记证书编号：</string>
	<string name="txtview_car_search_binding">绑定车辆：</string>
	<string name="btn_car_search_search">查询</string>
	<string name="txtview_car_search_messagetitle">查询说明</string>
</resources>